[tool.poetry]
name = "hidden-jams"
version = "0.1.0"
description = ""
authors = ["timr11 <timromanski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
neo4j = "^4.4"
gqlalchemy = "^1.5.1"
musicbrainzngs = "^0.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
